--- a/templates/index.html
+++ b/templates/index.html
@@ -1,159 +1,131 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
-
-    <title>Employee Churn</title>
-
-</head>
-<body>
-
-    <div class="container">
-  <div class="py-5 text-center">
-    <h2>Predict Employee Retention</h2>
-    <p class="lead">Below is an example form built to predict the HR Employee Retention in an Organization</p>
-  </div>
-
-  <div class="row">
-  <div class="col-md-2">
-  </div>
-    <div class="col-md-8">
-      <h4 class="mb-3">Employee Details</h4>
+{% block head %}
 
 
-   <div id="result"></div>
+<title>Employee Retension</title>
+{% endblock %}
 
-      <form id="predictForm" class="needs-validation" >
-        <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="satisfaction_level">Satisfaction Level</label>
-            <input type="text" class="form-control" id="satisfaction_level" placeholder="" value="" required>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="last_evaluation">Last Evaluation</label>
-            <input type="text" class="form-control" id="last_evaluation" placeholder="" value="" required>
-          </div>
-        </div>
+{% block content %}
 
-		<div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="number_project">Number Of Project</label>
-            <input type="text" class="form-control" id="number_project" placeholder="" value="" required>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="average_montly_hours">Average Montly Hours</label>
-            <input type="text" class="form-control" id="average_montly_hours" placeholder="" value="" required>
-          </div>
-        </div>
+<div class="row">
+    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6">
 
 
-		<div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="time_spend_company">Time Spend Company</label>
-            <input type="text" class="form-control" id="time_spend_company" placeholder="" value="" required>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="work_accident">Work Accident</label>
-            <input type="text" class="form-control" id="work_accident" placeholder="" value="" required>
-          </div>
-        </div>
+        <form action="/predict" method="post">
+            <legend>Housing Estimation Form</legend>
+            <div class="mb-3">
+                <label class="form-label">satisfaction_level</label>
+                <input class="form-control" type="text" name="satisfaction_level" placeholder="Enter a value of longitude"
+                    required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">last_evaluation</label>
+                <input class="form-control" type="text" name="last_evaluation" placeholder="Enter a value of latitude"
+                    required />
 
-		<div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="promotion_last_5years">Promotion Last 5years</label>
-            <input type="text" class="form-control" id="promotion_last_5years" placeholder="" value="" required>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="sales">Sales</label>
-            <input type="text" class="form-control" id="sales" placeholder="" value="" required>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="salary">Salary</label>
-            <input type="text" class="form-control" id="salary" placeholder="" value="" required>
-          </div>
-        </div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">number_project</label>
+                <input class="form-control" type="text" name="number_project"
+                    placeholder="Enter a value of number_project" />
 
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">average_montly_hours</label>
+                <input class="form-control" type="text" name="average_montly_hours" placeholder="Enter a value of total_rooms"
+                    required />
 
+            </div>
+            <div class="mb-3">
+                <label class="form-label">time_spend_company</label>
+                <input class="form-control" type="text" name="time_spend_company"
+                    placeholder="Enter a value of total_bedrooms" required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Work_accident</label>
+                <input class="form-control" type="text" name="Work_accident" placeholder="Enter a value of population"
+                    required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">promotion_last_5years</label>
+                <input class="form-control" type="text" name="promotion_last_5years" placeholder="Enter a value of households"
+                    required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">sales</label>
+                <input class="form-control" type="text" name="sales"
+                    placeholder="Enter a value of median_income" required />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">salary</label>
+                <select class="form-control" name="salary" placeholder="Enter a value of ocean_proximity"
+                    required>
 
+                    <option value="low">
+                      low
+                    </option>
+                    <option value="medium">
+                      medium
+                    </option>
+                    <option value="high">
+                      high
+                    </option>
 
+                </select>
+            </div>
+            <div class="mb-3">
 
-        </div>
-<div class="col-md-2">
-  </div>
+                <input class="btn btn-primary" type="submit" value="Predict Median House Value" required />
+            </div>
 
-      </form>
-
+        </form>
     </div>
-  </div>
 
-  <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2022</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
-  </footer>
+    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6">
+        <div class="card">
+            <div class="card-header">
+              California housing price
+            </div>
+            <div class="card-body">
+        {% if context['retension_data'] is not none %}
+        <table class="table table-striped">
+            <caption>Employee Retension Prediction </caption>
+            <tr>
+                <th>Input Feature</th>
+                <th>Feature Value</th>
+
+            </tr>
+            {% for column,value in context['retension_data'].items() %}
+
+
+
+            <tr>
+                <td>{{column}}</td>
+                <td>{{value[0]}}</td>
+            </tr>
+
+            {% endfor %}
+            <tr>
+
+                <td>median_house_value </td>
+                <td>
+                    {{ context['left'] }}
+                </td>
+            </tr>
+        </table>
+
+        {% else %}
+       
+              <h5 class="card-title">Submit Form</h5>
+              <p class="card-text">Kindly provide necessary information to estimate housing price in california</p>
+            
+         
+
+        {% endif %}
+        Go to <a href="/" class="btn btn-primary">Home</a>
+    </div>
 </div>
+    </div>
 
-
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<script type="text/javascript">
-    $("#predictForm" ).submit(function( event ) {
-
-  // Stop form from submitting normally
-     event.preventDefault();
-
-  // Get some values from elements on the page:
-      var $form = $( this )
-      satisfaction_level = $form.find("input[id='satisfaction_level']" ).val()
-      last_evaluation = $form.find("input[id='last_evaluation']" ).val()
-      number_project = $form.find("input[id='number_project']" ).val()
-      average_montly_hours = $form.find("input[id='average_montly_hours']" ).val()
-      time_spend_company = $form.find("input[id='time_spend_company']" ).val()
-      work_accident = $form.find("input[id='work_accident']" ).val()
-      promotion_last_5years = $form.find("input[id='promotion_last_5years']" ).val()
-      salary = $form.find("input[id='salary']" ).val()
-
-     var settings = {
-  "url": "http://localhost:5000/prediction",
-  "method": "POST",
-  "timeout": 0,
-  "headers": {
-    "Content-Type": "application/x-www-form-urlencoded"
-  },
-  "data": {
-    "satisfaction_level": satisfaction_level,
-    "last_evaluation": last_evaluation,
-    "number_project": number_project,
-    "average_montly_hours": average_montly_hours,
-    "time_spend_company": time_spend_company,
-    "work_accident": work_accident,
-    "promotion_last_5years": promotion_last_5years,
-    "salary": salary
-  }
-};
-
-$.ajax(settings).done(function (response) {
-  console.log(response);
-  $( "#result" ).empty().append('<div class="alert alert-success" role="alert">'+response+'</div>' );
-});
-
-    });
-</script>
-</body>
-</html>
+    {% endblock %}
