updated the files

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
     <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6">
         <div class="card">
             <div class="card-header">
-              California housing price
+              HR Employee Retension Prediction
             </div>
             <div class="card-body">
         {% if context['retension_data'] is not none %}
